--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "axios": "1.5.1",
-    "bootstrap": "5.3.2",
-    "react-bootstrap": "2.9.1",
-    "react-icons": "4.12.0",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "6.17.0",
     "react-select": "5.7.7",
     "react-toastify": "9.1.3"
